----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2006-01-06  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/sysprint.c: The text is now converted to the display-charset before it
	  is send to the printer (fixes Bug #532364).
	* print.c: The date-field is now also in UTF8 (as the rest of the mail).
	  Added a terminating 0-Byte to the buffer.

2006-01-06  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/composewnd.c: Added the input for "Blind Copies To" (BCC).
	* amiga-mui/transwndclass.c: The MUIA_Gauge_Max is checked against 65535 (see
	  MUI_Gauge.doc) and if necessary diveded by 2 until <=65535 and the
	  MUIA_Gauge_Divide will be set.
	* doc/amiga/SimpleMail.guide: Added BCC description.
	* mail.(c|h): Added Bcc field for composed mail.
	* smtp.c: The Bcc header field will not be send.
	* trans.c: Added the Bcc to the recipientlist for outgoing mails.

2005-12-29  Bernd Gollesch <bgollesch@sime.at>
	* text2html.c: Added some checks against wrong utf8 sequences which could bring
	  simplemail into an endless loop.

2005-12-27  Bernd Gollesch <bgollesch@sime.at>
	* mail.c: Added Thunderbird compatibility for X-Priority (High or Highest maps to
	  Importance: high).
	  The Importance header field will only be added if not set to normal.

2005-12-25  Bernd Gollesch <bgollesch@sime.at>
	* doc/amiga/SimpleMail.guide: Added importance for composed mail (RFE #1388866)
	* amiga-mui/composewnd.c: Added importance for composed mail (RFE #1388866)
	* mail.(c|h): Added importance for composed mail (RFE #1388866)

2005-12-24  Release Version 0.28

2005-12-24  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/readwnd.c: Update the folder_path of the moved mail in the data instance.
	* folder.c: Also check the pending mail array in folder_find_by_mail() function.

2005-10-15  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/support.c: Added the foldertree to the cyclechain and make it the